--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,23 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.0.1
+  flex_color_scheme: ^6.1.2
   flutter:
     sdk: flutter
+  freezed_annotation: ^2.2.0
   get: ^4.6.5
+  hooks_riverpod: ^2.3.0
+  json_annotation: ^4.8.0
   provider: ^6.0.5
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.2
+  json_serializable: ^6.6.1
   lints: ^2.0.1
 
 flutter:
