--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  collection: ^1.17.0
   cupertino_icons: ^1.0.2
   dio: ^5.0.1
   flex_color_scheme: ^6.1.2
