--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   freezed_annotation: ^2.2.0
-  get: ^4.6.5
+  go_router: ^6.2.0
   hooks_riverpod: ^2.3.0
   html: ^0.15.2
   json_annotation: ^4.8.0
