--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^6.2.0
   hooks_riverpod: ^2.3.0
   html: ^0.15.2
+  intl: ^0.18.0
   json_annotation: ^4.8.0
   provider: ^6.0.5
   shared_preferences: ^2.0.18
