--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   collection: ^1.17.0
   cupertino_icons: ^1.0.2
   dio: ^5.0.1
+  easy_refresh: ^3.3.1
   flex_color_scheme: ^6.1.2
   flutter:
     sdk: flutter
