--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   json_annotation: ^4.8.0
   provider: ^6.0.5
   shared_preferences: ^2.0.18
+  window_manager: ^0.3.1
 
 dev_dependencies:
   build_runner: ^2.3.3
