--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flex_color_scheme: ^6.1.2
   flutter:
     sdk: flutter
+  flutter_widget_from_html: ^0.10.0
   freezed_annotation: ^2.2.0
   go_router: ^6.2.0
   hooks_riverpod: ^2.3.0
