--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   json_annotation: ^4.8.0
   provider: ^6.0.5
   shared_preferences: ^2.0.18
+  url_launcher: ^6.1.10
   window_manager: ^0.3.1
 
 dev_dependencies:
