--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  collection: ^1.17.0
-  cupertino_icons: ^1.0.2
-  dio: ^5.0.1
-  easy_refresh: ^3.3.1
-  flex_color_scheme: ^6.1.2
+  collection: ^1.17.1
+  cupertino_icons: ^1.0.5
+  dio: ^5.1.2
+  easy_refresh: ^3.3.1+2
+  flex_color_scheme: ^7.1.0
   flutter:
     sdk: flutter
   flutter_widget_from_html: ^0.10.0
@@ -42,7 +42,6 @@ dependencies:
   html: ^0.15.3
   intl: ^0.18.1
   json_annotation: ^4.8.1
-  provider: ^6.0.5
   shared_preferences: ^2.1.1
   url_launcher: ^6.1.11
   window_manager: ^0.3.2
