--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,31 +28,31 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  collection: ^1.17.1
-  cupertino_icons: ^1.0.5
-  dio: ^5.2.1+1
+  collection: ^1.17.2
+  cupertino_icons: ^1.0.6
+  dio: ^5.3.2
   easy_refresh: ^3.3.2+1
-  flex_color_scheme: ^7.1.2
+  flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
-  flutter_widget_from_html: ^0.10.2
-  freezed_annotation: ^2.2.0
-  go_router: ^9.0.3
-  hooks_riverpod: ^2.3.6
+  flutter_widget_from_html: ^0.10.5+3
+  freezed_annotation: ^2.4.1
+  go_router: ^10.1.2
+  hooks_riverpod: ^2.4.0
   html: ^0.15.4
   intl: ^0.18.1
   json_annotation: ^4.8.1
-  shared_preferences: ^2.2.0
-  surf_lint_rules: ^1.0.0
-  url_launcher: ^6.1.12
-  window_manager: ^0.3.5
+  shared_preferences: ^2.2.1
+  surf_lint_rules: ^3.0.0
+  url_launcher: ^6.1.14
+  window_manager: ^0.3.6
 
 dev_dependencies:
   build_runner: ^2.4.6
-  flutter_lints: ^2.0.2
+  flutter_lints: ^2.0.3
   flutter_test:
     sdk: flutter
-  freezed: ^2.4.0
+  freezed: ^2.4.2
   json_serializable: ^6.7.1
   lints: ^2.1.1
 
