--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
   cupertino_icons: ^1.0.6
   dio: ^5.3.2
   dio_cookie_manager: ^3.1.0+1
+  dio_image_provider: ^0.0.2
   easy_refresh: ^3.3.2+1
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
   flutter_widget_from_html: ^0.10.5+3
+  fluttertoast: ^8.2.2
   freezed_annotation: ^2.4.1
   go_router: ^10.1.2
   hooks_riverpod: ^2.4.0
