feat(homepage): Show kahrpba swipper

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  card_swiper: ^3.0.1
   collection: ^1.17.2
   cookie_jar: ^4.0.8
   cupertino_icons: ^1.0.6
