--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,39 +1,20 @@
 name: tsdm_client
-description: 用Flutter制作的天使动漫（TSDM）论坛客户端。
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+description: 使用Flutter制作的天使动漫（tsdm39.com）论坛非官方客户端
+homepage: https://github.com/realth000/tsdm_client
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 0.0.1+1
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   card_swiper: ^3.0.1
   collection: ^1.17.2
   cookie_jar: ^4.0.8
   cupertino_icons: ^1.0.6
-  dio: ^5.3.2
-  dio_cookie_manager: ^3.1.0+1
+  dio: ^5.3.3
+  dio_cookie_manager: ^3.1.1
   dio_image_provider: ^0.0.2
   easy_refresh: ^3.3.2+1
   flex_color_scheme: ^7.3.1
@@ -42,13 +23,13 @@ dependencies:
   flutter_widget_from_html: ^0.10.5+3
   fluttertoast: ^8.2.2
   freezed_annotation: ^2.4.1
-  go_router: ^10.1.2
-  hooks_riverpod: ^2.4.0
+  go_router: ^11.1.2
+  hooks_riverpod: ^2.4.2
   html: ^0.15.4
   intl: ^0.18.1
   json_annotation: ^4.8.1
   path_provider: ^2.1.1
-  riverpod_annotation: ^2.1.5
+  riverpod_annotation: ^2.1.6
   shared_preferences: ^2.2.1
   surf_lint_rules: ^3.0.0
   url_launcher: ^6.1.14
@@ -56,49 +37,15 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.6
+  custom_lint: ^0.5.3
   flutter_lints: ^2.0.3
   flutter_test:
     sdk: flutter
-  freezed: ^2.4.2
+  freezed: ^2.4.3
   json_serializable: ^6.7.1
   lints: ^2.1.1
-  riverpod_generator: ^2.3.2
-  riverpod_lint: ^2.1.0
+  riverpod_generator: ^3.0.0-dev.2
+  riverpod_lint: ^2.2.1
 
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
