--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.6
   custom_lint: ^0.5.3
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^2.0.3
   flutter_test:
     sdk: flutter
@@ -49,3 +50,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+flutter_launcher_icons:
+  image_path: "assets/images/tsdm_client.png"
+  windows:
+    generate: true
+    image_path: "assets/images/tsdm_client.png"
+
