--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.8.1
   path_provider: ^2.1.1
+  responsive_framework: ^1.1.1
   riverpod_annotation: ^2.1.6
   surf_lint_rules: ^3.0.0
   url_launcher: ^6.1.14
