--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_widget_from_html: ^0.10.5+3
   fluttertoast: ^8.2.2
   freezed_annotation: ^2.4.1
@@ -32,6 +34,8 @@ dependencies:
   path_provider: ^2.1.1
   responsive_framework: ^1.1.1
   riverpod_annotation: ^2.1.6
+  slang: ^3.24.0
+  slang_flutter: ^3.24.0
   surf_lint_rules: ^3.0.0
   url_launcher: ^6.1.14
   window_manager: ^0.3.6
@@ -48,6 +52,7 @@ dev_dependencies:
   lints: ^2.1.1
   riverpod_generator: ^3.0.0-dev.2
   riverpod_lint: ^2.2.1
+  slang_build_runner: ^3.24.0
 
 flutter:
   uses-material-design: true
