--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,11 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_widget_from_html: ^0.10.5+3
+  flutter_widget_from_html: ^0.10.6
   fluttertoast: ^8.2.2
   freezed_annotation: ^2.4.1
-  go_router: ^11.1.2
-  hooks_riverpod: ^2.4.2
+  go_router: ^11.1.4
+  hooks_riverpod: ^2.4.3
   html: ^0.15.4
   intl: ^0.18.1
   isar: ^4.0.0-dev.14
@@ -33,12 +33,12 @@ dependencies:
   json_annotation: ^4.8.1
   path_provider: ^2.1.1
   responsive_framework: ^1.1.1
-  riverpod_annotation: ^2.1.6
+  riverpod_annotation: ^2.2.0
   slang: ^3.24.0
   slang_flutter: ^3.24.0
   surf_lint_rules: ^3.0.0
   url_launcher: ^6.1.14
-  window_manager: ^0.3.6
+  window_manager: ^0.3.7
 
 dev_dependencies:
   build_runner: ^2.4.6
@@ -47,11 +47,11 @@ dev_dependencies:
   flutter_lints: ^2.0.3
   flutter_test:
     sdk: flutter
-  freezed: ^2.4.3
+  freezed: ^2.4.5
   json_serializable: ^6.7.1
   lints: ^2.1.1
   riverpod_generator: ^3.0.0-dev.2
-  riverpod_lint: ^2.2.1
+  riverpod_lint: ^2.3.0
   slang_build_runner: ^3.24.0
 
 flutter:
