--- a/build.yaml
+++ b/build.yaml
@@ -13,5 +13,7 @@ targets:
           build_extensions:
             '^lib/{{}}.dart': 'lib/generated/{{}}.freezed.dart'
       slang_build_runner:
+        enabled: true
         options:
+          base_locale: en
           output_directory: 'lib/generated/i18n'
