--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   slang_flutter: ^3.24.0
   surf_lint_rules: ^3.0.0
   url_launcher: ^6.1.14
+  uuid: ^4.1.0
   window_manager: ^0.3.7
 
 dev_dependencies:
@@ -53,6 +54,10 @@ dev_dependencies:
   riverpod_generator: ^3.0.0-dev.2
   riverpod_lint: ^2.3.0
   slang_build_runner: ^3.24.0
+
+dependency_overrides:
+  # Blocked by custom_lint 0.5.3
+  uuid: ^4.1.0
 
 flutter:
   uses-material-design: true
