--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   card_swiper: ^3.0.1
+  # Blocked by flutter
   collection: ^1.17.2
   cookie_jar: ^4.0.8
   cupertino_icons: ^1.0.6
@@ -21,11 +22,11 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_widget_from_html: ^0.10.6
+  flutter_widget_from_html: ^0.14.4
   fluttertoast: ^8.2.2
   freezed_annotation: ^2.4.1
-  go_router: ^11.1.4
-  hooks_riverpod: ^2.4.3
+  go_router: ^12.0.0
+  hooks_riverpod: ^2.4.4
   html: ^0.15.4
   intl: ^0.18.1
   isar: ^4.0.0-dev.14
@@ -33,26 +34,28 @@ dependencies:
   json_annotation: ^4.8.1
   path_provider: ^2.1.1
   responsive_framework: ^1.1.1
-  riverpod_annotation: ^2.2.0
-  slang: ^3.24.0
-  slang_flutter: ^3.24.0
+  riverpod_annotation: ^2.2.1
+  slang: ^3.25.0
+  slang_flutter: ^3.25.0
   surf_lint_rules: ^3.0.0
   url_launcher: ^6.1.14
   uuid: ^4.1.0
 
 dev_dependencies:
   build_runner: ^2.4.6
-  custom_lint: ^0.5.3
+  custom_lint: ^0.5.4
   flutter_launcher_icons: ^0.13.1
-  flutter_lints: ^2.0.3
+  # Blocked by surf_lint_rules
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
   freezed: ^2.4.5
   json_serializable: ^6.7.1
+  # Blocked by surf_lint_rules
   lints: ^2.1.1
   riverpod_generator: ^3.0.0-dev.2
-  riverpod_lint: ^2.3.0
-  slang_build_runner: ^3.24.0
+  riverpod_lint: ^2.3.2
+  slang_build_runner: ^3.25.0
 
 dependency_overrides:
   # Blocked by custom_lint 0.5.3
