--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,6 @@ dependencies:
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
   hooks_riverpod: ^2.4.4
-  html: ^0.15.4
   intl: ^0.18.1
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
@@ -38,6 +37,7 @@ dependencies:
   slang: ^3.25.0
   slang_flutter: ^3.25.0
   surf_lint_rules: ^3.0.0
+  universal_html: ^2.2.4
   url_launcher: ^6.1.14
   uuid: ^4.1.0
 
