style(lint): Set lint rule unreferenced package to error
Set lint rule unreferenced package to error:
* Set lint rule "depend_on_referenced_packages" severity to error.
* https://dart.dev/tools/analysis#changing-the-severity-of-rules

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,7 +1,10 @@
 include:
   package:surf_lint_rules/analysis_options.yaml
 
+# https://dart.dev/tools/analysis#changing-the-severity-of-rules
 analyzer:
+  errors:
+    depend_on_referenced_packages: error
   exclude:
     - lib/**.g.dart
     - lib/**.freezed.dart
