--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
   hooks_riverpod: ^2.4.4
+  html_muncher:
+    path: lib/packages/html_muncher
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.8.1
