--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,9 @@ targets:
         options:
           base_locale: en
           output_directory: 'lib/generated/i18n'
+      gitsumu|info:
+        generate_for:
+          - lib/utils/git_info.dart
+        options:
+          build_extensions:
+            '^lib/{{}}.dart': 'lib/generated/{{}}.git.dart'
