chore(deps): Update dependencies

--- a/build.yaml
+++ b/build.yaml
@@ -20,3 +20,6 @@ targets:
       gitsumu|info:
         generate_for:
           - lib/utils/git_info.dart
+        options:
+          build_extensions:
+            '^lib/{{}}.dart': 'lib/generated/{{}}.gitsumu.dart'
