--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   dio: ^5.3.3
   dio_cookie_manager: ^3.1.1
   easy_refresh: ^3.3.2+4
+  extended_nested_scroll_view: ^6.1.2
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
