--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,13 @@ dependencies:
       url: https://github.com/realth000/gitsumu.git
       ref: eec78e9a88d93876a41c5a9bf4368cadcc8ccca8
   go_router: ^12.1.1
-  hooks_riverpod: ^2.4.6
+  hooks_riverpod: ^3.0.0-dev.0
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.8.1
   path_provider: ^2.1.1
   responsive_framework: ^1.1.1
-  riverpod_annotation: ^2.3.1
+  riverpod_annotation: ^3.0.0-dev.0
   slang: ^3.25.0
   slang_flutter: ^3.25.0
   surf_lint_rules: ^3.0.0
@@ -46,18 +46,14 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.6
-  custom_lint: ^0.5.6
+  custom_lint: ^0.5.7
   flutter_launcher_icons: ^0.13.1
-  # Blocked by surf_lint_rules
-  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
   freezed: ^2.4.5
   json_serializable: ^6.7.1
-  # Blocked by surf_lint_rules
-  lints: ^2.1.1
-  riverpod_generator: ^3.0.0-dev.2
-  riverpod_lint: ^2.3.4
+  riverpod_generator: ^3.0.0-dev.8
+  riverpod_lint: ^3.0.0-dev.1
   slang_build_runner: ^3.25.0
 
 dependency_overrides:
