--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  font_awesome_flutter: ^10.6.0
   freezed_annotation: ^2.4.1
   gitsumu:
     git:
