--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ "master" ]
 
+env:
+  CI_FLUTTER_VERSION: 3.16.x
+
 jobs:
   build-linux-android:
     name: Build Linux and Android
@@ -16,7 +19,7 @@ jobs:
           java-version: '11'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.16.x'
+          flutter-version: '$CI_FLUTTER_VERSION'
       - run: |
           sudo apt update -y
           sudo apt install -y ninja-build libgtk-3-dev
@@ -31,7 +34,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          channel: '3.16.x'
+          flutter-version: '$CI_FLUTTER_VERSION'
       - run: flutter pub get
       - run: dart run build_runner build
       - run: flutter build windows
