--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "master" ]
 
 env:
-  CI_FLUTTER_VERSION: 3.16.x
+  CI_FLUTTER_VERSION: '3.16.x'
 
 jobs:
   build-linux-android:
@@ -19,7 +19,7 @@ jobs:
           java-version: '11'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '$CI_FLUTTER_VERSION'
+          flutter-version: $CI_FLUTTER_VERSION
       - run: |
           sudo apt update -y
           sudo apt install -y ninja-build libgtk-3-dev
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '$CI_FLUTTER_VERSION'
+          flutter-version: $CI_FLUTTER_VERSION
       - run: flutter pub get
       - run: dart run build_runner build
       - run: flutter build windows
