--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   dio: ^5.4.0
   dio_cookie_manager: ^3.1.1
-  easy_refresh: ^3.3.2+4
+  easy_refresh: ^3.3.3+1
   extended_nested_scroll_view: ^6.1.2
   flex_color_scheme: ^7.3.1
   flutter:
@@ -29,7 +29,7 @@ dependencies:
     git:
       url: https://github.com/realth000/gitsumu.git
       ref: 4a410c1af875c89c4daeded52530713111ec9244
-  go_router: ^12.1.1
+  go_router: ^12.1.3
   hooks_riverpod: ^3.0.0-dev.3
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
@@ -37,8 +37,8 @@ dependencies:
   path_provider: ^2.1.1
   responsive_framework: ^1.1.1
   riverpod_annotation: ^3.0.0-dev.3
-  slang: ^3.26.1
-  slang_flutter: ^3.26.1
+  slang: ^3.26.2
+  slang_flutter: ^3.26.2
   surf_lint_rules: ^3.0.0
   toastification: ^1.1.0
   universal_html: ^2.2.4
@@ -55,10 +55,10 @@ dev_dependencies:
   json_serializable: ^6.7.1
   riverpod_generator: ^3.0.0-dev.11
   riverpod_lint: ^3.0.0-dev.4
-  slang_build_runner: ^3.26.1
+  slang_build_runner: ^3.26.2
 
 dependency_overrides:
-  # Blocked by custom_lint 0.5.3
+  # Blocked by custom_lint 0.5.3 and flutter_test
   uuid: ^4.2.1
 
 flutter:
