--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{env.CI_FLUTTER_VERSION}}
+          cache: true
       - run: |
           sudo apt update -y
           sudo apt install -y ninja-build libgtk-3-dev
