--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -24,14 +24,41 @@ jobs:
       - run: |
           sudo apt update -y
           sudo apt install -y ninja-build libgtk-3-dev
-      - run: flutter pub get
-      - run: dart run build_runner build
-      - run: flutter build linux
+      - name: Precompile
+        run: |
+          flutter pub get
+          dart run build_runner build
+      - name: Build Linux
+        run: flutter build linux --release
+      - name: Pack Linux tarball
+        uses: thedoctor0/zip-release@master
+        with:
+          type: 'tar'
+          filename: tsdm_client-linux.tar.gz
+          directory: build/linux/x64/release/bundle
+      - name: Upload Linux artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: Linux tarball
+          path: build/linux/x64/release/bundle/tsdm_client-linux.tar.gz
       - name: Setup Android sign key
         run: |
           echo '${{ secrets.KEYSTORE }}' | base64 --decode > android/app/key.jks
           echo '${{ secrets.KEY_PROPERTIES }}' > android/key.properties
-      - run: flutter build apk
+      - name: Build Android
+        run: |
+          flutter build apk --release
+      - name: Pack Android apk
+        run: |
+          mv build/app/outputs/flutter-apk/app-arm64-v8a-release.apk build/app/outputs/flutter-apk/tsdm_client-arm64_v8a.apk
+          mv build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk build/app/outputs/flutter-apk/tsdm_client-armeabi_v7a.apk
+      - name: Upload Android artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: Android apk
+          path: |
+            build/app/outputs/flutter-apk/tsdm_client-arm64_v8a.apk
+            build/app/outputs/flutter-apk/tsdm_client-armeabi_v7a.apk
   build-windows:
     name: Build Windows
     runs-on: windows-latest
@@ -40,6 +67,20 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{env.CI_FLUTTER_VERSION}}
-      - run: flutter pub get
-      - run: dart run build_runner build
-      - run: flutter build windows
+      - name: Precompile
+        run: |
+          flutter pub get
+          dart run build_runner build
+      - name: Build Windows
+        run: flutter build windows --release
+      - name: Pack Windows tarball
+        uses: thedoctor0/zip-release@master
+        with:
+          type: 'zip'
+          filename: tsdm_client-windows.zip
+          directory: build/windows/runner/Release
+      - name: Upload Windows artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: Windows tarball
+          path: build/windows/runner/Release/tsdm_client-windows.zip
