--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.8.1
+  path: ^1.8.3
   path_provider: ^2.1.1
   permission_handler: ^11.1.0
   responsive_framework: ^1.1.1
