--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,8 @@ dependencies:
   device_info_plus: ^9.1.1
   dio: ^5.4.0
   dio_cookie_manager: ^3.1.1
-  easy_refresh: ^3.3.3+1
-  extended_nested_scroll_view: ^6.1.2
+  easy_refresh: ^3.3.4
+  extended_nested_scroll_view: ^6.2.1
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
@@ -30,22 +30,22 @@ dependencies:
     git:
       url: https://github.com/realth000/gitsumu.git
       ref: 4a410c1af875c89c4daeded52530713111ec9244
-  go_router: ^12.1.3
+  go_router: ^13.0.0
   hooks_riverpod: ^3.0.0-dev.3
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.8.1
-  path: ^1.8.3
+  path: any
   path_provider: ^2.1.1
   permission_handler: ^11.1.0
   responsive_framework: ^1.1.1
   riverpod_annotation: ^3.0.0-dev.3
-  slang: ^3.26.2
-  slang_flutter: ^3.26.2
+  slang: ^3.28.0
+  slang_flutter: ^3.28.0
   surf_lint_rules: ^3.0.0
   toastification: ^1.1.0
   universal_html: ^2.2.4
-  url_launcher: ^6.2.1
+  url_launcher: ^6.2.2
   uuid: ^4.2.1
 
 dev_dependencies:
@@ -54,11 +54,11 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
-  freezed: ^2.4.5
+  freezed: ^2.4.6
   json_serializable: ^6.7.1
   riverpod_generator: ^3.0.0-dev.11
   riverpod_lint: ^3.0.0-dev.4
-  slang_build_runner: ^3.26.2
+  slang_build_runner: ^3.28.0
 
 dependency_overrides:
   # Blocked by custom_lint 0.5.3 and flutter_test
