--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
+  flutter_bbcode_editor:
+    git:
+      url: https://github.com/realth000/flutter_bbcode_editor.git
+      ref: fc03d1595adfa7d2e3b672e2407460c61699b82c
   flutter_localizations:
     sdk: flutter
   font_awesome_flutter: ^10.6.0
