--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.6.0
   freezed_annotation: ^2.4.1
-  gitsumu:
-    git:
-      url: https://github.com/realth000/gitsumu.git
-      ref: 4a410c1af875c89c4daeded52530713111ec9244
+  gitsumu: ^0.1.0
   go_router: ^13.0.0
   hooks_riverpod: ^3.0.0-dev.3
   isar: ^4.0.0-dev.14
