--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,13 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   freezed_annotation: ^2.4.1
   get_it: ^7.6.6
-  gitsumu: ^0.1.0
-  go_router: ^13.0.0
+  gitsumu: ^0.2.0
+  go_router: ^13.0.1
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.8.1
   path: any
-  path_provider: ^2.1.1
+  path_provider: ^2.1.2
   permission_handler: ^11.1.0
   responsive_framework: ^1.1.1
   rxdart: ^0.27.7
@@ -50,11 +50,11 @@ dependencies:
   surf_lint_rules: ^3.0.0
   toastification: ^1.1.0
   universal_html: ^2.2.4
-  url_launcher: ^6.2.2
-  uuid: ^4.2.1
+  url_launcher: ^6.2.3
+  uuid: ^4.3.3
 
 dev_dependencies:
-  build_runner: ^2.4.7
+  build_runner: ^2.4.8
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
@@ -62,9 +62,9 @@ dev_dependencies:
   json_serializable: ^6.7.1
   slang_build_runner: ^3.28.0
 
-dependency_overrides:
-  # Blocked by custom_lint 0.5.3 and flutter_test
-  uuid: ^4.2.1
+#  dependency_overrides:
+#    # Blocked by custom_lint 0.5.3 and flutter_test
+#    uuid: ^4.2.1
 
 flutter:
   uses-material-design: true
