--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,6 @@
 include:
-  package:surf_lint_rules/analysis_options.yaml
+  # package:surf_lint_rules/analysis_options.yaml
+  package:very_good_analysis/analysis_options.yaml
 
 # https://dart.dev/tools/analysis#changing-the-severity-of-rules
 analyzer:
