--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -1,6 +1,12 @@
 name: Test build
 
 on:
+  push:
+    branches: [ "master" ]
+    tags-ignore:
+      - 'v**'
+  pull_request:
+    branches: [ "master" ]
   workflow_dispatch:
     inputs:
       build_android:
