--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
           dart run build_runner build
       - name: Run flutter analyze
         run: |
-          flutter analyze --suggestions --fatal-infos --fatal-warnings
+          flutter analyze --fatal-infos --fatal-warnings
       - name: Run flutter test
         run: |
           flutter test
