--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,24 @@
 name: tsdm_client
 description: 使用Flutter制作的天使动漫（tsdm39.com）论坛非官方客户端
 repository: https://github.com/realth000/tsdm_client
+homepage: https://github.com/realth000/tsdm_client
+issue_tracker: https://github.com/realth000/tsdm_client/issues
 publish_to: 'none'
 
 version: 0.6.0+8
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  flutter: ">=3.16.0 <4.0.0"
+  sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
-  bloc: ^8.1.2
+  bloc: ^8.1.3
   card_swiper: ^3.0.1
   # Blocked by flutter
   collection: any
   cookie_jar: ^4.0.8
   cupertino_icons: ^1.0.6
-  device_info_plus: ^9.1.1
+  device_info_plus: ^9.1.2
   dio: ^5.4.0
   dio_cookie_manager: ^3.1.1
   easy_refresh: ^3.3.4
@@ -28,20 +31,20 @@ dependencies:
     git:
       url: https://github.com/realth000/flutter_bbcode_editor.git
       ref: fc03d1595adfa7d2e3b672e2407460c61699b82c
-  flutter_bloc: ^8.1.3
+  flutter_bloc: ^8.1.4
   flutter_localizations:
     sdk: flutter
-  font_awesome_flutter: ^10.6.0
+  font_awesome_flutter: ^10.7.0
   freezed_annotation: ^2.4.1
   get_it: ^7.6.7
-  gitsumu: ^0.2.1
-  go_router: ^13.0.1
+  gitsumu: ^0.3.0
+  go_router: ^13.2.0
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.8.1
   path: any
   path_provider: ^2.1.2
-  permission_handler: ^11.2.0
+  permission_handler: ^11.3.0
   responsive_framework: ^1.1.1
   rxdart: ^0.27.7
   shimmer: ^3.0.0
@@ -50,7 +53,7 @@ dependencies:
   stream_transform: ^2.1.0
   surf_lint_rules: ^3.0.0
   universal_html: ^2.2.4
-  url_launcher: ^6.2.3
+  url_launcher: ^6.2.4
   uuid: ^4.3.3
 
 dev_dependencies:
@@ -58,7 +61,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
-  freezed: ^2.4.6
+  freezed: ^2.4.7
   json_serializable: ^6.7.1
   slang_build_runner: ^3.29.0
   very_good_analysis: ^5.1.0
