--- a/build.yaml
+++ b/build.yaml
@@ -23,3 +23,9 @@ targets:
         options:
           build_extensions:
             '^lib/{{}}.dart': 'lib/generated/{{}}.gitsumu.dart'
+      dart_mappable_builder:
+        options:
+          build_extensions:
+            'lib/{{}}.dart':
+              - 'lib/generated/{{}}.mapper.dart'
+
