--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   collection: any
   cookie_jar: ^4.0.8
   cupertino_icons: ^1.0.6
+  dart_mappable: ^4.2.0
   device_info_plus: ^9.1.2
   dio: ^5.4.0
   dio_cookie_manager: ^3.1.1
@@ -58,6 +59,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.8
+  dart_mappable_builder: ^4.2.0
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
