--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bbcode_editor:
-    git:
-      url: https://github.com/realth000/flutter_bbcode_editor.git
-      ref: fc03d1595adfa7d2e3b672e2407460c61699b82c
+    path: './packages/flutter_bbcode_editor'
+    # git:
+    #   url: https://github.com/realth000/flutter_bbcode_editor.git
+    #   ref: fc03d1595adfa7d2e3b672e2407460c61699b82c
   flutter_bloc: ^8.1.4
   flutter_localizations:
     sdk: flutter
