--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -62,6 +62,7 @@ jobs:
         run: |
           flutter pub get
           dart run build_runner build
+          git submodule update --init --recursive --force
       - name: Build Linux
         if: ${{ github.event_name == 'push' || inputs.build_linux }}
         run: flutter build linux --release
@@ -121,6 +122,7 @@ jobs:
         run: |
           flutter pub get
           dart run build_runner build
+          git submodule update --init --recursive --force
       - name: Build Windows
         run: flutter build windows --release
       - name: Pre Packing
@@ -156,6 +158,7 @@ jobs:
         run: |
           flutter pub get
           dart run build_runner build
+          git submodule update --init --recursive --force
       - name: Build MacOS
         if: ${{ github.event_name == 'push' || inputs.build_macos }}
         run: |
