--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   bloc: ^8.1.3
   card_swiper: ^3.0.1
   # Blocked by flutter
+  change_case: ^2.0.1
   collection: any
   cookie_jar: ^4.0.8
   cupertino_icons: ^1.0.6
@@ -50,8 +51,8 @@ dependencies:
   responsive_framework: ^1.4.0
   rxdart: ^0.27.7
   shimmer: ^3.0.0
-  slang: ^3.29.0
-  slang_flutter: ^3.29.0
+  slang: ^3.30.1
+  slang_flutter: ^3.30.0
   stream_transform: ^2.1.0
   surf_lint_rules: ^3.0.0
   universal_html: ^2.2.4
@@ -69,7 +70,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.7.1
-  slang_build_runner: ^3.29.0
+  slang_build_runner: ^3.30.0
   very_good_analysis: ^5.1.0
 
 #  dependency_overrides:
