--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,8 @@ environment:
 dependencies:
   bloc: ^8.1.3
   card_swiper: ^3.0.1
-  # Blocked by flutter
   change_case: ^2.0.1
+  # Blocked by flutter
   collection: any
   cookie_jar: ^4.0.8
   cupertino_icons: ^1.0.6
@@ -37,7 +37,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.6.20+1
+  flutter_markdown: ^0.6.21
   font_awesome_flutter: ^10.7.0
   get_it: ^7.6.7
   gitsumu: ^0.3.0
