--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ dependencies:
   collection: any
   cookie_jar: ^4.0.8
   cupertino_icons: ^1.0.6
-  dart_mappable: ^4.2.0
+  dart_mappable: ^4.2.1
+  # Blocked by appflow-editor
   device_info_plus: ^9.1.2
   dio: ^5.4.1
   dio_cookie_manager: ^3.1.1
@@ -37,11 +38,11 @@ dependencies:
   flutter_bloc: ^8.1.4
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.6.21
+  flutter_markdown: ^0.6.22
   font_awesome_flutter: ^10.7.0
   get_it: ^7.6.7
   gitsumu: ^0.3.0
-  go_router: ^13.2.0
+  go_router: ^13.2.1
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.8.1
