chore(build): Use compress option to reduce apk size

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -103,6 +103,15 @@ android {
             universalApk true
         }
     }
+
+    packagingOptions {
+        dex {
+            useLegacyPackaging true
+        }
+        jniLibs {
+            useLegacyPackaging true
+        }
+    }
 }
 
 flutter {
