--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -151,7 +151,7 @@ jobs:
           flutter build macos --release
       - name: Packing MacOS dmg
         run: |
-          python3 -m pip install setuptools
+          brew install python-setuptools
           npm install -g appdmg
           appdmg appdmg.json build/tsdm_client-universal.dmg
       - name: Release macOS artifacts
