feat(chat): Finish chat page
Build and support chat in chat page.

Chat page entrance:

* User brief profile in thread floor.
* User profile page.

--- a/build.yaml
+++ b/build.yaml
@@ -23,4 +23,5 @@ targets:
           build_extensions:
             'lib/{{}}.dart':
               - 'lib/generated/{{}}.mapper.dart'
+          generatedMethods: [ decode, encode, copy, stringify, equals ]
 
