chore(version): Bump version to 1.0.0-alpha

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/realth000/tsdm_client
 issue_tracker: https://github.com/realth000/tsdm_client/issues
 publish_to: 'none'
 
-version: 0.14.0+19
+version: 1.0.0-alpha+20
 
 environment:
   flutter: ">=3.24.0 <4.0.0"
